[package]
name = "metaplex-token-vault"
version = "0.0.1"
description = "NFT Marketplace Token Vault"
authors = ["NFT Marketplace Maintainers <maintainers@fyfy.io>"]
repository = "https://github.com/vamise/nft-marketplace"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
